[package]
name = "britt-marie"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"


[workspace]
members = [
  "britt-marie-derive",
  "tests",
]

[dependencies]
fxhash = "0.2.1"
cfg-if = "0.1.10"
packed_simd = { version = "0.3.3", optional = true }
lru = "0.5.2"
prost = { git = "https://github.com/Max-Meldrum/prost.git", branch = "derive_generics" }
bytes = "0.5"
thiserror = "1.0"
rocksdb = { version = "0.14.0", optional = true }
britt-marie-derive = { version = "0.1", path = "britt-marie-derive", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox'] }
once_cell = "1.3.1"
rand = "0.7.3"

[features]
default = ["embedded", "britt-marie-derive"]
nightly = ["packed_simd"]
embedded = ["rocksdb"]

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "simd_ops"
harness = false
