[package]
name = "britt-marie"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[workspace]
members = [
  "britt-marie-derive",
  "tests",
]

[dependencies]
britt-marie-derive = { version = "0.1", path = "britt-marie-derive", optional = true }
fxhash = "0.2.1"
thiserror = "1.0"
cfg-if = "0.1.10"
packed_simd = { version = "0.3.3", optional = true }

# Raw Store
rocksdb = { version = "0.14.0", optional = true }

# Protobuf
prost = { version = "0.6", optional = true }
bytes = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ['real_blackbox'] }
itertools = "0.9.0"
tempfile = "3.1.0"
once_cell = "1.3.1"
rand = "0.7.3"

[features]
default = ["embedded", "britt-marie-derive", "protobuf"]
nightly = ["packed_simd"]
embedded = ["rocksdb"]
protobuf = ["prost", "bytes"]

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "search"
harness = false
